# WALL-E

./: .Dockerfile.swp  .gitignore  .gitmodules  .start_docker.sh.swp  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  CODE_ISSUES.md  COMPLETE_OPERATING_MANUAL.md  Dockerfile  FIXES_COMPLETE.md  FIX_2_TEST_RESULTS.md  FIX_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  RVIZ_MAP_SHIFT_ANALYSIS.md  TECHNICAL_ANALYSIS.md  docker-compose.yml  docker_term.sh  entrypoint.sh  env_file.txt  fix_default_routes.sh  gps_start.service  motor_test.py  robot_start.service  rtabmap.sh  rviz.sh  start_docker.sh  teleop.sh  test_int.py  test_waypoint_handler_responsiveness.py  udo apt update  waveshare.service  waveshare_start.sh  web_app.service
.github/: copilot-instructions.md
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/launch/: mapping.launch  motor_teleop.launch  robot_start.launch  rosbridge.launch  usb_cam.launch  view_camera.launch
catkin_ws/src/motor_control/: CMakeLists.txt  package.xml
catkin_ws/src/motor_control/config/: motor_control_params.yaml
catkin_ws/src/motor_control/launch/: motor_control.launch
catkin_ws/src/motor_control/src/: dual_g2_hpmd_rpi.py  motor.py  motor_control_node.py
catkin_ws/src/motor_control/test/: motortest.py
catkin_ws/src/web_app/: CMakeLists.txt  package.xml
catkin_ws/src/web_app/src/: map_img_node.py
docker/: Dockerfile  diagnostics.txt  entrypoint.sh  start_docker.sh
ros2_roboclaw_driver/src/ros2_roboclaw_driver/config/: motor_driver.yaml
ros2_ws/log/: latest_build
ros2_ws/src/bno085_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/bno085_driver/action/: CalibrateMagnetometer.action
ros2_ws/src/bno085_driver/bno085_driver/: bno085.py  bno085_node.py  intwaypointrv.py  launch_waypoint_system.launch.xml  test.py  waypoint_follower_node.py
ros2_ws/src/bno085_driver/launch/: bno085_launch.py  bno085_launch_int.py
ros2_ws/src/gy88_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/gy88_driver/config/: gy88_calibration.json
ros2_ws/src/gy88_driver/gy88_driver/: __init__.py  gy88_calibration.py  gy88_driver.py  gy88_node.py  test.py.old
ros2_ws/src/gy88_driver/launch/: gy88_calibration.launch.py  gy88_driver.launch.py
ros2_ws/src/motor_control/: package.xml  setup.py
ros2_ws/src/motor_control/launch/: motor_launch.py
ros2_ws/src/motor_control/motor_control/: motor_control_node.py  motor_test.py
ros2_ws/src/nmea_navsat_driver/config/: nmea_serial_driver.yaml
ros2_ws/src/roboclaw_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/roboclaw_driver/launch/: roboclaw_launch.py
ros2_ws/src/roboclaw_driver/roboclaw_driver/: __init__.py  roboclaw_3.py  roboclaw_node.py
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/config/: diff_drive_controller.yaml
ros2_ws/src/robot_bringup/launch/: diff_drive_controller.launch.py  gps_launch.py  robot_launch.py  usb_cam_launch.py
ros2_ws/src/robot_bringup/urdf/: robot.urdf.xacro
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/urdf/: robot.urdf
ros2_ws/src/robot_messages/: CMakeLists.txt  package.xml
ros2_ws/src/robot_messages/msg/: RoboclawStatus.msg
ros2_ws/src/robot_navigation/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/robot_navigation/config/: dual_ekf_navsat_params.yaml  nav2_no_map_params.yaml  nav2_params.yaml  slam_params.yaml  twist_mux.yaml
ros2_ws/src/robot_navigation/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  launch_waypoint_system.launch  launch_waypoint_system.launch.py  nav2_launch.py  rplidar_launch.py  slam_toolbox_launch.py
ros2_ws/src/robot_navigation/resource/: waypoint_interactive_markers.py
ros2_ws/src/robot_navigation/robot_navigation/: __init__.py  fake_odom_publisher.py
ros2_ws/src/robot_navigation_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_navigation_demo/config/: dual_ekf_navsat_params.yaml  slam_params.yaml  slam_rviz.rviz
ros2_ws/src/robot_navigation_demo/launch/: rplidar_launch.py  slam_launch.py  slam_viz_launch.py
ros2_ws/src/robot_teleop/: package.xml  setup.py
ros2_ws/src/robot_teleop/config/: joy_linux_f710.yaml  logitech_f710.yaml
ros2_ws/src/robot_teleop/launch/: robot_teleop.launch.py  robot_teleop_launch.py
ros2_ws/src/robot_waypoint/: package.xml
ros2_ws/src/scan_matcher/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/scan_matcher/config/: scan_matcher_params.yaml
ros2_ws/src/scan_matcher/launch/: scan_matcher.launch.py  scan_matcher_launch.py  scan_matcher_with_rviz.launch.py
ros2_ws/src/scan_matcher/scan_matcher/: scan_matcher_node.py
ros2_ws/src/slam_config/: CMakeLists.txt  package.xml
ros2_ws/src/slam_config/launch/: rtabmap_launch.py
ros2_ws/src/sllidar_ros2/launch/: sllidar_s3_launch.py
ros2_ws/src/teleop/: CMakeLists.txt  package.xml
ros2_ws/src/teleop/launch/: teleop_launch.py
ros2_ws/src/waypoint_server/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/waypoint_server/config/: waypoints.yaml
ros2_ws/src/waypoint_server/launch/: launch_waypoint_system.launch.py
ros2_ws/src/waypoint_server/src/waypoint_server/: waypoint_server_node.py
ros2_ws/src/waypoint_server/waypoint_server/: gps_waypoint_handler_node.py  waypoint_follower_node.py
rviz2/: default.rviz  persistent_settings
scripts/: 99-walle-devices.rules  gps_start.sh  mint-cellular.nmconnection  reset_imu.py  reset_imu_gpio.py
systemctl_services/: robot_start.service
web_app/: Dockerfile  README.md  app.py  gps_on.py  web_app_power_monitoring_plan.md
web_app/backend/: main.py  requirements.txt
web_app/backend/routers/: __init__.py  camera.py  robot.py  waypoints.py
web_app/backend/services/: __init__.py  rosbridge_client.py
web_app/frontend/: .env.example  .gitignore  index.html  package.json  vite.config.ts
web_app/frontend/src/: App.css  App.tsx  constants.ts  main.tsx  vite-env.d.ts
web_app/frontend/src/components/: CameraFeed.tsx  CostmapViewer.tsx  GoogleMapsPanel.tsx  (+2 more)
web_app/templates/: index.html
(+5 files in other folders)
