<?xml version="1.0"?>
<package format="2">
  <name>web_app</name>
  <version>0.0.1</version>
  <description>A ROS package for generating map images with robot position and heading.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>